terraform/infra_creation/route_tabel.tf
# Route tabel creation and Association
resource "aws_route_table" "Route-table" {
  vpc_id = aws_vpc.cicd-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "my-rt"
  }
}
resource "aws_route_table_association" "Rt-Association" {
  subnet_id      = aws_subnet.public-subnet.id
  route_table_id = aws_route_table.Route-table.id
}
